erDiagram
    Users {
        int idUsers PK
        string name
        string email
        datetime created_at
    }

    Shops {
        int idshops PK
        string shopName
        string shopDescription
        json necessaryDescription
        string ownerName
        json contactInformation
        int userId FK
    }

    Products {
        int idProducts PK
        string caption
        string price
        int shopId FK
    }

    Categories {
        string categoryName PK
    }

    Users ||--|| Shops : "One-to-One"
    Products }o--|| Shops : "Many-to-One"
    Shops }o--o{ Categories : "Many-to-Many"
    Categories }o--o{ Shops : "Many-to-Many"
